# Tesis2016

./: #main.cpp#  CMakeLists.txt  CMakeLists.txt~  README.md  first-data-forces-v.out~  nohup.out~
GeometricModule/inc/: meshIncludes.h
GeometricModule/inc/headers/: GridBoundary.h~  LatticeBolztmannD2Q9.h~  LatticeBolztmannD3Q15.h~  MeshHelper.h  Model.h  PolyhedronBuilder.h  PolyhedronContainer.h  PreGridProcessing.h  PreGridProcessing.h~
GeometricModule/src/: MeshHelper.cpp  Model.cpp  PolyhedronContainer.cpp  PreGridProcessing.cpp  PreGridProcessing.cpp~  main.cpp
inc/: ELB3DQ15.h  ELB3DQ15.h~  ForceModule.h  LBD3Q15.h  ObstacleLoader.h  Vector.h
results/: descr
src/: ELBD3Q15.cpp  ELBD3Q15.cpp~  ForceModule.cpp  LBD3Q15.cpp  LBD3Q15.cpp~  ObstacleLoader.cpp  Vector.cpp  main.cpp  main.cpp~
